// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot matches for selected ItemCard 1`] = `
<ItemCard
  isSelected={true}
  item={
    Object {
      "gender": "a gender",
      "id": "1",
      "image": "some-image-url",
      "name": "a name",
      "origin": Object {
        "dimension": "a origin dimension",
        "name": "a origin name",
      },
      "species": "a species",
      "status": "a status",
      "type": "a type",
    }
  }
/>
`;

exports[`snapshot matches for unselected ItemCard 1`] = `
<ItemCard
  isSelected={false}
  item={
    Object {
      "gender": "a gender",
      "id": "1",
      "image": "some-image-url",
      "name": "a name",
      "origin": Object {
        "dimension": "a origin dimension",
        "name": "a origin name",
      },
      "species": "a species",
      "status": "a status",
      "type": "a type",
    }
  }
/>
`;
